<?xml version="1.0"?>
<package>
  <name>penetrometer_tools</name>
  <version>0.0.0</version>
  <description>The penetrometer_tools package</description>
  <maintainer email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/open_nav</url> -->


  <author email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend>base_drive_chain</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>-->
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!--<run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>base_drive_chain</run_depend>-->
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
